# proxy-agent

./: .gitignore  Dockerfile  Recomendações prioritárias.md  docker-compose.yml  exemplos_atedimento.md  langgraph.json  main.py  pyproject.toml
.github/workflows/: deploy.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/application/agent/: proxy_agent_builder.py
app/application/agent/state/: proxy_agent_state.py
app/application/tool/: __init__.py  budget_agent_tool.py  company_agent_tool.py  handle_customer_agent_tool.py  math_tool.py  service_budget_agent_tool.py
app/model/: chat_request.py  chat_response.py
app/presentation/: proxy_router.py
